--- a/FibonacciTime.ipynb
+++ b/FibonacciTime.ipynb
@@ -37,6 +37,30 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "633ge8eW5OWt",
+        "outputId": "22010556-f043-460e-ba3c-c8f14102c3ea"
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "JkXRJRxlgD4B"
       },
       "source": [
@@ -46,7 +70,7 @@
         "  else:\r\n",
         "    return (recursiveFibonacci(n-1) + recursiveFibonacci(n-2))"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,6 +89,8 @@
         "  recursiveFibonacci(numbers[i])\r\n",
         "  print(i)\r\n",
         "  times[i] = (time.time() - start_time)\r\n",
+        "  #debido a que el tiempo de ejecución fue amplio, se guardaron los datos en un txt,\r\n",
+        "  #posteriormente para su uso simplemente se copia y pega la información\r\n",
         "  with open(\"/content/drive/MyDrive/2020-2S/ALGORITMOS/time_data.txt\", 'a') as f:\r\n",
         "            f.write(str(times[i])+\",\")\r\n",
         "  start_time = time.time()\r\n",
@@ -86,7 +112,7 @@
         "        a, b = b, a + b\r\n",
         "    return a"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -102,11 +128,11 @@
         "\r\n",
         "start_time = time.time()\r\n",
         "for i in range (len(numbers)):\r\n",
-        "  #print(iterativeFibonacci(numbers[i]))\r\n",
+        "  iterativeFibonacci(numbers[i])\r\n",
         "  times[i] = (time.time() - start_time)\r\n",
         "  start_time = time.time()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -117,7 +143,7 @@
           "height": 295
         },
         "id": "TKMyBm5tgTY7",
-        "outputId": "632b5e43-cdd8-421c-abd2-69af1e741f1d"
+        "outputId": "abecc945-2278-4a80-f65b-c32f4c480171"
       },
       "source": [
         "from pylab import * \r\n",
@@ -134,7 +160,7 @@
         "plt.xlabel('n fibonacci')\r\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
